--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "pbmedia/laravel-ffmpeg": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
