--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-gd": "*",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0",
-        "pbmedia/laravel-ffmpeg": "^3.0",
-        "ext-gd": "*"
+        "pbmedia/laravel-ffmpeg": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
